# polygon-packer

./: .gitignore  JS_README.md  README.md  package.json  polygon_packer.js  polygon_packer.py  pyproject.toml  requirements.txt
__pycache__/: polygon_packer.transform_polygon-32.py313.1.nbc  polygon_packer.transform_polygon-32.py313.nbi  polygon_packer.transform_polygon-34.py313.1.nbc  polygon_packer.transform_polygon-34.py313.nbi
polygon-packer-py/: polygon_packer.py
polygon-packer-rs/: Cargo.toml
polygon-packer-rs/src/: main.rs  rust_specific.rs
