[package]
name = "polygon-packer-rs"
version = "0.2.0"
edition = "2024"
authors = ["Voxell Paladynee <voxellpaladynee@proton.me>"]

[dependencies]
# numeric library
ndarray = "0.17.2"
# optimization library
nlopt = "0.6.0"
# plot library
plotters = "0.3"
# parallelization
rayon = "1.7"
# command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# Voxell's homegrown RNG library, used for pure-rust PCG family of random number
# generators. https://www.pcg-random.org/index.html
voxell_rng = "0.6.0"
# bump allocator for temporary arena allocations to reduce transient heap use
bumpalo = {version = "3", features = ["collections"]}
nalgebra = "0.34.2"

[profile.release]
# opt-level: 3 for full optimizations
opt-level = 3
# lto: allows library code to be more aggressively inlined
# "thin" for a lighter mode, "fat" for max perf
lto = "fat"
# codegen-units: only 1 concurrent compiler so the optimizer
# has maximum code context 
codegen-units = 1
# panic: this potentially reduces instruction-cache pressure, but if it crashes
# you won't get fancy errors.
# set to "unwind" for fancy errors
# set to "abort" for a very slight boost
panic = "abort"

# ============================================
# Linter configuration. A linter is a program that pattern-matches on source
# code to identify issues. I (@Paladynee) use a very strict linter
# configuration. 

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "allow", priority = -1 }
restriction = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

mod_module_files = "deny"
self_named_module_files = "allow"
doc_paragraphs_missing_punctuation = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_pointer_underscore = "allow"
as_underscore = "allow"
assertions_on_result_states = "allow"
big_endian_bytes = "allow"
cognitive_complexity = "allow"
arbitrary_source_item_ordering = "allow"
dbg_macro = "allow"
default_numeric_fallback = "allow"
default_union_representation = "allow"
deref_by_slicing = "allow"
disallowed_script_idents = "allow"
else_if_without_else = "allow"
empty_drop = "allow"
empty_enum_variants_with_brackets = "allow"
empty_structs_with_brackets = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
fn_to_numeric_cast_any = "allow"
host_endian_bytes = "allow"
if_then_some_else_none = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
infinite_loop = "allow"
inline_asm_x86_att_syntax = "allow"
inline_asm_x86_intel_syntax = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
large_include_file = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
little_endian_bytes = "allow"
lossy_float_literal = "allow"
mem_forget = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_asserts_for_indexing = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mixed_read_write_in_expression = "allow"
module_name_repetitions = "allow"
modulo_arithmetic = "allow"
multiple_unsafe_ops_per_block = "allow"
needless_raw_strings = "allow"
non_ascii_literal = "allow"
panic = "allow"
panic_in_result_fn = "allow"
partial_pub_fields = "allow"
pointer_format = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "allow"
question_mark_used = "allow"
rc_buffer = "allow"
redundant_type_annotations = "allow"
ref_patterns = "allow"
renamed_function_params = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "allow"
string_add = "allow"
string_slice = "allow"
suspicious_xor_used_as_pow = "allow"
tests_outside_test_module = "allow"
todo = "allow"
try_err = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_safety_comment = "allow"
unnecessary_safety_doc = "allow"
unnecessary_self_imports = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unused_result_ok = "allow"
unused_trait_names = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
use_debug = "allow"
wildcard_enum_match_arm = "allow"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
default_trait_access = "allow"
elidable_lifetime_names = "allow"
empty_enums = "allow"
enum_glob_use = "allow"
explicit_deref_methods = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
if_not_else = "allow"
ignore_without_reason = "allow"
ignored_unit_patterns = "allow"
index_refutable_slice = "allow"
inline_always = "allow"
into_iter_without_iter = "allow"
items_after_statements = "allow"
large_digit_groups = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
linkedlist = "allow"
manual_assert = "allow"
manual_is_power_of_two = "allow"
many_single_char_names = "allow"
match_bool = "allow"
match_same_arms = "allow"
match_wild_err_arm = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
mut_mut = "allow"
needless_bitwise_bool = "allow"
needless_continue = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
float_cmp = "allow"
no_effect_underscore_binding = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
pub_underscore_fields = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
single_match_else = "allow"
string_add_assign = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_box_returns = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
verbose_bit_mask = "allow"
wildcard_imports = "allow"
equatable_if_let = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
use_self = "allow"
missing_safety_doc = "allow"
manual_let_else = "allow"
map_err_ignore = "allow"
or_fun_call = "allow"
blanket_clippy_restriction_lints = "allow"
doc_markdown = "allow"
decimal_literal_representation = "allow"

[lints.rust]
ambiguous_negative_literals = "warn"
non_ascii_idents = "warn"
